src/components/input-field/partial-styles/_readonly.scss
:host([type='url']),
:host([type='urlAsText']),
:host([type='tel']) {
    .mdc-text-field {
        &.lime-text-field--readonly {
            &:hover {
                .lime-looks-like-input-value,
                .mdc-text-field__input {
                    color: rgb(var(--color-white));
                }
                .mdc-text-field__input {
                    z-index: z-index.$input-field--mdc-text-field__input--readonly;
                }
            }
        }
    }
}

:host([type='url']),
:host([type='email']),
:host([type='urlAsText']),
:host([type='tel']) {
    .mdc-text-field {
        &.lime-text-field--readonly {
            .mdc-text-field__input {
                @include mixins.truncate-text();
                width: calc(100% - 2.75rem);
            }
        }
    }
}

:host([type='textarea']) {
    .mdc-text-field {
        &.lime-text-field--readonly {
            .mdc-text-field__resizer {
                pointer-events: all; //allows resize
            }
        }
    }
}

